deploy: d2f8eabd698b5cbffb3825ed85dd35ecaeee754f

--- a/ch1/sec2/free-products-of-groups.html
+++ b/ch1/sec2/free-products-of-groups.html
@@ -502,7 +502,7 @@ word. A key property of the association <span class="math notranslate nohighligh
 associativity follows rather trivially from associativity in <span class="math notranslate nohighlight">\(G_\alpha\)</span>. The formula <span class="math notranslate nohighlight">\(L_{gg'} = L_gL_{g'}\)</span>
 implies that <span class="math notranslate nohighlight">\(L_g\)</span> is invertible with inverse <span class="math notranslate nohighlight">\(L_{g^{-1}}\)</span>. Therefore the association <span class="math notranslate nohighlight">\(g \mapsto L_g\)</span>
 defines a homomorphism from <span class="math notranslate nohighlight">\(G_\alpha\)</span> to the group <span class="math notranslate nohighlight">\(P(W)\)</span> of all permutations of <span class="math notranslate nohighlight">\(W\)</span>. More
-generally, we can define <span class="math notranslate nohighlight">\(L:W \rightarrowP(W)\)</span> by <span class="math notranslate nohighlight">\(L(g_1 \cdots g_m) = L_{g_1} \cdots L_{g_m}\)</span> for each reduced
+generally, we can define <span class="math notranslate nohighlight">\(L:W \rightarrow P(W)\)</span> by <span class="math notranslate nohighlight">\(L(g_1 \cdots g_m) = L_{g_1} \cdots L_{g_m}\)</span> for each reduced
 word <span class="math notranslate nohighlight">\(g_1 \cdots g_m\)</span>. This function <span class="math notranslate nohighlight">\(L\)</span> is injective since the permutation <span class="math notranslate nohighlight">\(L(g_1 \cdots g_m)\)</span> sends
 the empty word to <span class="math notranslate nohighlight">\(g_1 \cdots g_m\)</span>. The product operation in <span class="math notranslate nohighlight">\(W\)</span> corresponds under <span class="math notranslate nohighlight">\(L\)</span> to
 composition in <span class="math notranslate nohighlight">\(P(W)\)</span>, because of the relation <span class="math notranslate nohighlight">\(L_{gg'}=L_gL_{g'}\)</span>. Since composition in
@@ -530,7 +530,7 @@ This group is sometimes called the infinite dihedral group.</p>
 subgroup of <span class="math notranslate nohighlight">\({\Large *}_\alpha G_\alpha\)</span>, the subgroup consisting of the empty word and the nonidentity
 one-letter words <span class="math notranslate nohighlight">\(g \in G_\alpha\)</span>. From this viewpoint the empty word is the common identity
 element of all the subgroups <span class="math notranslate nohighlight">\(G_\alpha\)</span>, which are otherwise disjoint. A consequence
-of associativity is that anay product <span class="math notranslate nohighlight">\(g_1 \codts g_m\)</span> of elements <span class="math notranslate nohighlight">\(g_i\)</span> in the groups <span class="math notranslate nohighlight">\(G_\alpha\)</span> has a
+of associativity is that anay product <span class="math notranslate nohighlight">\(g_1 \cdots g_m\)</span> of elements <span class="math notranslate nohighlight">\(g_i\)</span> in the groups <span class="math notranslate nohighlight">\(G_\alpha\)</span> has a
 unique reduced form, the element of <span class="math notranslate nohighlight">\({\Large *}_\alpha G_\alpha\)</span> obtained by performing the multiplications
 in any order. Any sequence of reduction operations on an unreduced product
 <span class="math notranslate nohighlight">\(g_1 \cdots g_m\)</span>, ombining adjacent letters <span class="math notranslate nohighlight">\(g_i\)</span> and <span class="math notranslate nohighlight">\(g_{i+1}\)</span> that lie in the same <span class="math notranslate nohighlight">\(G_\alpha\)</span> or canceling
