deploy: 87d236aaf83418405726715e853bcf823c28eb60

--- a/ch1/sec2/exercises.html
+++ b/ch1/sec2/exercises.html
@@ -550,21 +550,17 @@ free on an infinite number of generators.</p>
 <p><strong>18.</strong> In this problem we use the notions of suspension, reduced suspension, cone, and
 mapping cone defined in <span class="xref std std-ref">Chapter 0</span>. Let <span class="math notranslate nohighlight">\(X\)</span> be the subspace of <span class="math notranslate nohighlight">\(\mathbb{R}\)</span> consisting of the
 sequence <span class="math notranslate nohighlight">\(1,\frac{1}{2},\frac{1}{3},\frac{1}{4},\cdots\)</span> together with its limit point <span class="math notranslate nohighlight">\(0\)</span>.</p>
-<dl>
-<dt><span style="margin-left: 1em"> (a)    For the suspension <span class="math notranslate nohighlight">\(SX\)</span>, show that <span class="math notranslate nohighlight">\(\pi_1(SX)\)</span> is free on a countably infinite set of</dt><dd><blockquote>
-<div><p>generators, and deduce that <span class="math notranslate nohighlight">\(\pi_1(SX)\)</span> is countable. In contrast to this, the reduced
+<ol class="loweralpha simple">
+<li><p>For the suspension <span class="math notranslate nohighlight">\(SX\)</span>, show that <span class="math notranslate nohighlight">\(\pi_1(SX)\)</span> is free on a countably infinite set of
+generators, and deduce that <span class="math notranslate nohighlight">\(\pi_1(SX)\)</span> is countable. In contrast to this, the reduced
 suspension <span class="math notranslate nohighlight">\(\sigma X\)</span>, obtained from <span class="math notranslate nohighlight">\(SX\)</span> by collapsing the segment <span class="math notranslate nohighlight">\(\{0\} \times I\)</span> to a point, is
 the shrinking wedge of circles in <span class="xref std std-ref">Example 1.25</span>, with an uncountable fundamental
-group.</p>
-</div></blockquote>
-<ol class="loweralpha simple" start="2">
+group.</p></li>
 <li><p>Let <span class="math notranslate nohighlight">\(C\)</span> be the mapping cone of the quotient map <span class="math notranslate nohighlight">\(SX \rightarrow \sigma X\)</span>. Show that <span class="math notranslate nohighlight">\(\pi_1(C)\)</span> is
 uncountable by constructing a homomorphism from <span class="math notranslate nohighlight">\(\pi_1(C)\)</span> onto <span class="math notranslate nohighlight">\(\prod_\infty \mathbb{Z} / \bigoplus _\infty \mathbb{Z}\)</span>. Note
 that <span class="math notranslate nohighlight">\(C\)</span> is the reduced suspension of the cone <span class="math notranslate nohighlight">\(CX\)</span>. Thus the reduced suspension
 of a contractible space need not be contractible, unlike the unreduced suspension.</p></li>
 </ol>
-</dd>
-</dl>
 </div>
 <p id="excercise-1-2-19"><strong>19.</strong> Show that the subspace of <span class="math notranslate nohighlight">\(\mathbb{R}^3\)</span> that is the union of the spheres of radius <span class="math notranslate nohighlight">\(\frac{1}{n}\)</span> and
 center <span class="math notranslate nohighlight">\((\frac{1}{n},0,0)\)</span> for <span class="math notranslate nohighlight">\(n=1,2,\cdots\)</span> is simply-connected.</p>
@@ -581,6 +577,7 @@ called the <em>Wirtinger presentation</em>. To begin, we position the knot to li
 a table, so that <span class="math notranslate nohighlight">\(K\)</span> consists of finitely many disjoint arcs <span class="math notranslate nohighlight">\(\alpha_i\)</span> where it intersects the
 table top together with finitely many disjoint arcs <span class="math notranslate nohighlight">\(\beta_l\)</span> where <span class="math notranslate nohighlight">\(K\)</span> crosses over itself.
 The configuration at such crossing is shown in the first figure below.</p>
+<a class="reference internal image-reference" href="../../_images/ex-1-2-22.png"><img alt="../../_images/ex-1-2-22.png" class="align-center" src="../../_images/ex-1-2-22.png" style="width: 100%;" /></a>
 <p>We build a
 <span class="math notranslate nohighlight">\(2\)</span>-dimensional complex <span class="math notranslate nohighlight">\(X\)</span> that is a deformation retract of <span class="math notranslate nohighlight">\(\mathbb{R}^3-K\)</span> by the following
 three steps. First, start with the rectangle <span class="math notranslate nohighlight">\(T\)</span> formed by the table top. Next, just above
@@ -594,17 +591,13 @@ of <span class="math notranslate nohighlight">\(R_j\)</span> and <span class="ma
 crossing the interior of <span class="math notranslate nohighlight">\(R_i\)</span>. The knot <span class="math notranslate nohighlight">\(K\)</span> is now a subspace of <span class="math notranslate nohighlight">\(X\)</span>, but after we lift <span class="math notranslate nohighlight">\(K\)</span> up
 slightly into the complement of <span class="math notranslate nohighlight">\(X\)</span>, it becomes evident that <span class="math notranslate nohighlight">\(X\)</span> is a deformation retract of
 <span class="math notranslate nohighlight">\(\mathbb{R}^3-K\)</span>.</p>
-<dl>
-<dt><span style="margin-left: 1em"> (a)    Assuming this bit of geometry, show that <span class="math notranslate nohighlight">\(\pi_1(\mathbb{R}^3-K)\)</span> has a presentation with one</dt><dd><blockquote>
-<div><p>generator <span class="math notranslate nohighlight">\(x_i\)</span> for each strip <span class="math notranslate nohighlight">\(R_i\)</span> and one relation of the form <span class="math notranslate nohighlight">\(x_i x_j x_i^{-1} = x_k\)</span> for
+<dl class="simple">
+<dt>(a)    Assuming this bit of geometry, show that <span class="math notranslate nohighlight">\(\pi_1(\mathbb{R}^3-K)\)</span> has a presentation with one</dt><dd><p>generator <span class="math notranslate nohighlight">\(x_i\)</span> for each strip <span class="math notranslate nohighlight">\(R_i\)</span> and one relation of the form <span class="math notranslate nohighlight">\(x_i x_j x_i^{-1} = x_k\)</span> for
 each square <span class="math notranslate nohighlight">\(S_l\)</span>, where the indices are as in the figures above. [To get the correct
 signs it is helpful to use an orientation of <span class="math notranslate nohighlight">\(K\)</span>.]</p>
-</div></blockquote>
-<ol class="loweralpha simple" start="2">
-<li><p>Use this presentation to show that the abelianization of <span class="math notranslate nohighlight">\(\pi_1(\mathbb{R}^3-K)\)</span> is <span class="math notranslate nohighlight">\(\mathbb{Z}\)</span>.</p></li>
-</ol>
 </dd>
 </dl>
+<p>(b)    Use this presentation to show that the abelianization of <span class="math notranslate nohighlight">\(\pi_1(\mathbb{R}^3-K)\)</span> is <span class="math notranslate nohighlight">\(\mathbb{Z}\)</span>.</p>
 </div>
 </section>
 
