deploy: 16d8b81f80b2b24dd2b2fe6ec3c9336e5ed8ddaa

--- a/ch1/sec3/the-classification-of-covering-spaces.html
+++ b/ch1/sec3/the-classification-of-covering-spaces.html
@@ -787,6 +787,27 @@ of <span class="math notranslate nohighlight">\(\pi_1(X,x_0)\)</span> on a set <
 natural projection <span class="math notranslate nohighlight">\(\tilde{X}_\rho \rightarrow X\)</span> sending <span class="math notranslate nohighlight">\(([\gamma], \tilde{x}_0)\)</span> to <span class="math notranslate nohighlight">\(\gamma(1)\)</span>, and this is a covering space since
 if <span class="math notranslate nohighlight">\(U \subset X\)</span> is an open set over which the universal cover <span class="math notranslate nohighlight">\(\tilde{X}_0\)</span> is a product <span class="math notranslate nohighlight">\(U \times \pi_1(X,x_0)\)</span>,
 then the identifications defining <span class="math notranslate nohighlight">\(\tilde{X}_\rho\)</span> simply collapse <span class="math notranslate nohighlight">\(U \times \pi_1(X, x_0) \times F\)</span> to <span class="math notranslate nohighlight">\(U \times F\)</span>.</p>
+<p><span style="margin-left: 2em"> Returning to our given covering spce <span class="math notranslate nohighlight">\(\tidlex{X} \rightarrow X\)</span> with associated action <span class="math notranslate nohighlight">\(\rho\)</span>, the map
+<span class="math notranslate nohighlight">\(\tilde{X}_\rho \rightarrow \tilde{X}\)</span> induced by <span class="math notranslate nohighlight">\(h\)</span> is a bijection and therefore a homeomorphism since <span class="math notranslate nohighlight">\(h\)</span> was a
+local homeomorphism. Since this homeomorphism <span class="math notranslate nohighlight">\(\tilde{X}_\rho \rightarrow \tilde{X}\)</span> takes each fiber of <span class="math notranslate nohighlight">\(\tilde{X}_\rho\)</span> to
+the corresponding fiber of <span class="math notranslate nohighlight">\(\tilde{X}\)</span>, it is an isomorphism of covering spaces.</p>
+<p><span style="margin-left: 2em"> If two covering spaces <span class="math notranslate nohighlight">\(\p_1:\tilde{X} \rightarrow X\)</span> and <span class="math notranslate nohighlight">\(p_2: \tilde{X}_2 \rightarrow X\)</span> are isomorphic, one may ask
+how the corresponding actions of <span class="math notranslate nohighlight">\(\pi_1(X,x_0)\)</span> on the fibers <span class="math notranslate nohighlight">\(F_1\)</span> and <span class="math notranslate nohighlight">\(F_2\)</span> over <span class="math notranslate nohighlight">\(x_0\)</span> are
+related. An isomorphism <span class="math notranslate nohighlight">\(h:\tilde{X}_1 \rightarrow \tilde{X}_2\)</span> restricts to a bijection <span class="math notranslate nohighlight">\(F_1 \rightarrow F_2\)</span>, and evidently
+<span class="math notranslate nohighlight">\(L_\gamma(h(\tilde{x}_0)) =  h(L-\gamma (\tilde{x}_0))\)</span>. Using the less cumbersome notation <span class="math notranslate nohighlight">\(\gamma \tilde{x}_0\)</span> for <span class="math notranslate nohighlight">\(L_\gamma (\tilde{x}_0)\)</span>, this
+relation can be written more concisely as <span class="math notranslate nohighlight">\(\gamma h (\tilde{x}_0) = h(\gamma \tilde{x}_0)\)</span>. A bijection <span class="math notranslate nohighlight">\(F_1 \rightarrow F_2\)</span> with
+this property is what one would naturally call an <em>isomorphism of sets with</em> <span class="math notranslate nohighlight">\(\pi_1(X,x_0)\)</span>
+<em>action</em>. Thus isomorphic covering spaces have isomorphic actions on fibers. The
+converse is also true, and easy to prove. One just observes that for isomorphic actions
+<span class="math notranslate nohighlight">\(\rho_1\)</span> and <span class="math notranslate nohighlight">\(\rho_2\)</span>, an isomorphism <span class="math notranslate nohighlight">\(h:F_1 \rightarrow F_2\)</span> induces a map <span class="math notranslate nohighlight">\(\tilde{X}_{\rho_1} \rightarrow \tilde{X}_{\rho_2}\)</span> and <span class="math notranslate nohighlight">\(h^{-1}\)</span> induces a
+similar map in the opposite direction, such that the compositions of these two maps,
+in either order, are the identity.</p>
+<p><span style="margin-left: 2em"> This shows that <span class="math notranslate nohighlight">\(n\)</span>-sheeted covering spaces of <span class="math notranslate nohighlight">\(X\)</span> are classified by equivalence
+classes of homomorphisms <span class="math notranslate nohighlight">\(\pi_1(X,x_0) \rightarrow \Sigma _n\)</span>, where <span class="math notranslate nohighlight">\(\Sigma_n\)</span> is the symmetric group on <span class="math notranslate nohighlight">\(n\)</span>
+symbols and the equivalence relation identifies a homomorphism <span class="math notranslate nohighlight">\(\rho\)</span> with each of its
+conjugates <span class="math notranslate nohighlight">\(h^{-1}\rho h\)</span> by elements <span class="math notranslate nohighlight">\(h \in \Sigma_n\)</span>. The study of the various homomorphisms
+from a given group to <span class="math notranslate nohighlight">\(\Sigma_n\)</span> is a very classical topic in group theory, so we see that this
+algebraic question has a nice geometric interpretation.</p>
 </section>
 </section>
 
