deploy: 5cb1584b595dc66086027bfc48b948442890b32f

--- a/ch1/sec3/lifting-properties.html
+++ b/ch1/sec3/lifting-properties.html
@@ -571,7 +571,7 @@ where <span class="math notranslate nohighlight">\(\tilde{f\eta}=p^{-1}f\eta\)</
 <div class="line"><br /></div>
 </div>
 <p><span style="margin-left: 2em"> Without the local path-connectedness assumption on <span class="math notranslate nohighlight">\(Y\)</span> the lifting criterion in the
-preceding proposition can fail, as shown by an example in <span class="xref std std-ref">Exercise 7</span> at the end of this
+preceding proposition can fail, as shown by an example in <a class="hxr-hoverxref hxr-tooltip reference internal" href="exercises.html#exercise-1-3-7"><span class="std std-ref">Exercise 7</span></a> at the end of this
 section.</p>
 <p><span style="margin-left: 2em"> Next we have the <strong>unique lifting property:</strong></p>
 <div class="docutils container" id="proposition-1-34">
